--- a/hair_harmony_be/hair_harmony_be.csproj
+++ b/hair_harmony_be/hair_harmony_be.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="14.2.0" />
     <PackageReference Include="Swagger-Net" Version="8.5.12.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
